# ICVAT-backend

./: .gitignore  pyproject.toml  requirements.txt
apps/a12n/: apps.py  urls.py  views.py
apps/categories/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_name_and_more.py
apps/categories/templates/categories/: index.html
apps/dashboard/: urls.py  views.py
apps/documents/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py
apps/tags/: apps.py  models.py  serializers.py  urls.py  views.py
apps/tags/migrations/: 0001_initial.py
apps/users/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/pwd/: password-reset.html
backend/: settings.py  urls.py  views.py
backend/templates/email/: activation.html  password_reset.html
backend/utils/: mailer.py
